@@ -133,4 +133,13 @@ FILE *tempfile(const char *base);
 #define TOOLS_LOCK_WRITE 1
 int lock_file(FILE *f, int lock_type, int timeout);
 
+/*
+ * string_replace()
+ *
+ * Replace all occurences of 's' in the string 'str' with 'r'.
+ * The string 'str' must be an allocated string. A pointer to the expanded
+ * string is returned.
+ */
+char *string_replace(char *str, const char *s, const char *r);
+
 #endif
